# quentin-torrentino

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  PHASE_1A_PLAN.md  PHASE_1B_PLAN.md  PHASE_1_DASHBOARD_PLAN.md  PHASE_2A_SEARCH_SYSTEM_PLAN.md  PHASE_2C_TORRENT_CATALOG_PLAN.md  PHASE_2_PLAN.md  README.md  config.example.toml  config.test.toml  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: ci.yml
crates/core/: Cargo.toml
crates/core/src/: lib.rs  metrics.rs
crates/core/src/audit/: events.rs  handle.rs  mod.rs  sqlite.rs  store.rs  writer.rs
crates/core/src/auth/: api_key.rs  mod.rs  none.rs  traits.rs  types.rs
crates/core/src/catalog/: mod.rs  sqlite.rs  types.rs
crates/core/src/config/: loader.rs  mod.rs  types.rs  validate.rs
crates/core/src/content/: generic.rs  mod.rs  music.rs  types.rs  video.rs
crates/core/src/converter/: capabilities.rs  config.rs  error.rs  ffmpeg.rs  mod.rs  traits.rs  types.rs
crates/core/src/external_catalog/: mod.rs  musicbrainz.rs  tmdb.rs  types.rs
crates/core/src/orchestrator/: config.rs  mod.rs  runner.rs  types.rs
crates/core/src/placer/: config.rs  error.rs  fs_placer.rs  mod.rs  traits.rs  types.rs
crates/core/src/processor/: config.rs  mod.rs  pipeline.rs  types.rs
crates/core/src/searcher/: dedup.rs  file_enricher.rs  jackett.rs  mod.rs  rate_limiter.rs  torrent_parser.rs  types.rs
crates/core/src/testing/: mock_converter.rs  mock_external_catalog.rs  mock_placer.rs  mock_searcher.rs  mock_torrent_client.rs  mod.rs
crates/core/src/textbrain/: config.rs  coordinator.rs  dumb_matcher.rs  dumb_query_builder.rs  file_mapper.rs  llm.rs  llm_matcher.rs  llm_query_builder.rs  mod.rs  training.rs  traits.rs  types.rs
crates/core/src/ticket/: mod.rs  sqlite_store.rs  store.rs  types.rs
crates/core/src/torrent_client/: librqbit.rs  mod.rs  qbittorrent.rs  types.rs
crates/core/tests/: orchestrator_lifecycle.rs  pipeline_lifecycle.rs
crates/dashboard/: .gitignore  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.node.json  uno.config.ts  vite.config.ts
crates/dashboard/e2e/: audit.spec.ts  dashboard.spec.ts  health.spec.ts  navigation.spec.ts  search.spec.ts  tickets.spec.ts
crates/dashboard/e2e/fixtures/: api.ts
crates/dashboard/src/: App.vue  main.ts
crates/dashboard/src/api/: audit.ts  catalog.ts  client.ts  config.ts  external-catalog.ts  health.ts  orchestrator.ts  pipeline.ts  searcher.ts  textbrain.ts  tickets.ts  torrents.ts  types.ts
crates/dashboard/src/components/auth/: ApiKeyLogin.vue
crates/dashboard/src/components/common/: Badge.vue  ErrorAlert.vue  LoadingSpinner.vue
crates/dashboard/src/components/layout/: AppHeader.vue  AppLayout.vue  AppSidebar.vue
crates/dashboard/src/components/orchestrator/: OrchestratorStatus.vue
crates/dashboard/src/components/search/: IndexerList.vue  IndexerSettings.vue  SearchForm.vue  SearchResults.vue
crates/dashboard/src/components/textbrain/: CandidateScoring.vue  FileMappingView.vue  QueryPreview.vue
crates/dashboard/src/components/tickets/: CreateTicketForm.vue  MusicTicketWizard.vue  TicketCard.vue  TicketDetail.vue  TicketList.vue  TicketStateFilter.vue  VideoTicketWizard.vue
crates/dashboard/src/components/torrents/: AddTorrentForm.vue  TorrentCard.vue  TorrentList.vue  TorrentStateFilter.vue
crates/dashboard/src/composables/: useAudit.ts  useAuth.ts  useCatalogLookup.ts  useHealth.ts  usePipeline.ts  useSearcher.ts  useTextBrain.ts  useTicketWizard.ts  useTickets.ts  useTorrents.ts  useWebSocket.ts
crates/dashboard/src/router/: index.ts
crates/dashboard/src/stores/: app.ts
crates/dashboard/src/styles/: main.css
crates/dashboard/src/views/: AuditLogView.vue  ConfigView.vue  DashboardView.vue  HealthView.vue  PipelineView.vue  SearchView.vue  SettingsView.vue  TextBrainView.vue  TicketDetailView.vue  TicketsView.vue  TorrentsView.vue
crates/server/: Cargo.toml
crates/server/src/: lib.rs  main.rs  metrics.rs  state.rs
crates/server/src/api/: audit.rs  catalog.rs  external_catalog.rs  handlers.rs  middleware.rs  mod.rs  orchestrator.rs  pipeline.rs  routes.rs  searcher.rs  textbrain.rs  tickets.rs  torrents.rs  ws.rs
crates/server/tests/: audit_integration.rs  e2e_tests.rs  pipeline_integration.rs  server_startup.rs  ticket_integration.rs
crates/server/tests/common/: mod.rs
scripts/: claude_proxy.py
