[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/server",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
rust-version = "1.83"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework
axum = { version = "0.8", features = ["multipart"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors", "fs"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Configuration
figment = { version = "0.10", features = ["toml", "env"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Async traits
async-trait = "0.1"

# Database
rusqlite = { version = "0.33", features = ["bundled"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Hashing
sha2 = "0.10"
md5 = "0.7"

# UUID
uuid = { version = "1", features = ["v4"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "multipart", "cookies"] }

# URL encoding
urlencoding = "2"

# Futures utilities
futures = "0.3"

# Regex (lightweight)
regex-lite = "0.1"

# BitTorrent
librqbit = "8.1"
librqbit-core = "5.0"

# Testing
tokio-test = "0.4"
