[package]
name = "torrentino-core"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
figment = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
rusqlite = { workspace = true }
chrono = { workspace = true }
sha2 = { workspace = true }
md5 = { workspace = true }
uuid = { workspace = true }
reqwest = { workspace = true }
urlencoding = { workspace = true }
futures = { workspace = true }
regex-lite = { workspace = true }
prometheus = { workspace = true }
once_cell = { workspace = true }
librqbit = { workspace = true }
librqbit-core = { workspace = true }
librqbit-buffers = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = "3"
