[package]
name = "torrentino-server"
version.workspace = true
edition.workspace = true

[[bin]]
name = "quentin"
path = "src/main.rs"

[dependencies]
torrentino-core = { path = "../core" }
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
sha2 = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
tempfile = "3"
serde_json = { workspace = true }
