[package]
name = "torrentino-server"
version.workspace = true
edition.workspace = true

[[bin]]
name = "quentin"
path = "src/main.rs"

[dependencies]
torrentino-core = { path = "../core" }
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
sha2 = { workspace = true }
chrono = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
futures = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = "3"
serde_json = { workspace = true }
tower = { workspace = true, features = ["util"] }
http-body-util = "0.1"
hyper = { version = "1", features = ["full"] }
